{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 419,
  "lineage": "8b5a69a1-ac95-a99f-0889-ba7af870f3a6",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:267239224662:internet-gateway/igw-0380cf8cb5297d06f",
            "id": "igw-0380cf8cb5297d06f",
            "owner_id": "267239224662",
            "tags": {
              "Name": "trams4u-dev-igw"
            },
            "tags_all": {
              "Name": "trams4u-dev-igw"
            },
            "vpc_id": "vpc-09ffcd2e5dbbc8fce"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb",
      "name": "Trams4U_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:267239224662:loadbalancer/app/trams4u-dev-elb/c7a16e227998eaed",
            "arn_suffix": "app/trams4u-dev-elb/c7a16e227998eaed",
            "desync_mitigation_mode": "defensive",
            "dns_name": "trams4u-dev-elb-615780320.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:267239224662:loadbalancer/app/trams4u-dev-elb/c7a16e227998eaed",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "trams4u-dev-elb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-057de44f3ac31db71"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-014426077ede79703"
              },
              {
                "subnet_id": "subnet-07a93059e2733b941"
              }
            ],
            "subnets": [
              "subnet-014426077ede79703",
              "subnet-07a93059e2733b941"
            ],
            "vpc_id": "vpc-09ffcd2e5dbbc8fce",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available",
            "module.sg.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:267239224662:listener/app/trams4u-dev-elb/c7a16e227998eaed/dd98cc397b3bb04b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:267239224662:targetgroup/trams4u-dev-alb-tg/80328edb5bc76e08",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:267239224662:listener/app/trams4u-dev-elb/c7a16e227998eaed/dd98cc397b3bb04b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:267239224662:loadbalancer/app/trams4u-dev-elb/c7a16e227998eaed",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "trams4u-dev-alb-http-listener"
            },
            "tags_all": {
              "Name": "trams4u-dev-alb-http-listener"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_lb.Trams4U_lb",
            "module.network.aws_lb_target_group.alb_tg",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available",
            "module.sg.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:267239224662:targetgroup/trams4u-dev-alb-tg/80328edb5bc76e08",
            "arn_suffix": "targetgroup/trams4u-dev-alb-tg/80328edb5bc76e08",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:267239224662:targetgroup/trams4u-dev-alb-tg/80328edb5bc76e08",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "trams4u-dev-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09ffcd2e5dbbc8fce"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:267239224662:route-table/rtb-0d615a9493470e2b5",
            "id": "rtb-0d615a9493470e2b5",
            "owner_id": "267239224662",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0380cf8cb5297d06f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "trams4u-dev-rt"
            },
            "tags_all": {
              "Name": "trams4u-dev-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ffcd2e5dbbc8fce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd733fa6b8083422",
            "route_table_id": "rtb-0d615a9493470e2b5",
            "subnet_id": "subnet-07a93059e2733b941"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.rtb",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c925a3903d4edb5",
            "route_table_id": "rtb-0d615a9493470e2b5",
            "subnet_id": "subnet-014426077ede79703"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.rtb",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:267239224662:subnet/subnet-07a93059e2733b941",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a93059e2733b941",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "267239224662",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "trams4u-dev-public-subnet-0"
            },
            "tags_all": {
              "Name": "trams4u-dev-public-subnet-0"
            },
            "vpc_id": "vpc-09ffcd2e5dbbc8fce"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:267239224662:subnet/subnet-014426077ede79703",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014426077ede79703",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "267239224662",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "trams4u-dev-public-subnet-1"
            },
            "tags_all": {
              "Name": "trams4u-dev-public-subnet-1"
            },
            "vpc_id": "vpc-09ffcd2e5dbbc8fce"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:267239224662:vpc/vpc-09ffcd2e5dbbc8fce",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f6d6e49c1e261785",
            "default_route_table_id": "rtb-0c4d4d70c7aa18f91",
            "default_security_group_id": "sg-0107b2f77dad25449",
            "dhcp_options_id": "dopt-020de3decb4e9277f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09ffcd2e5dbbc8fce",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c4d4d70c7aa18f91",
            "owner_id": "267239224662",
            "tags": {
              "Name": "trams4u-dev-vpc"
            },
            "tags_all": {
              "Name": "trams4u-dev-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:267239224662:security-group/sg-057de44f3ac31db71",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-057de44f3ac31db71",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "trams4u-dev-ec2-sg",
            "name_prefix": "",
            "owner_id": "267239224662",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09ffcd2e5dbbc8fce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}